@@ -3,6 +3,10 @@ This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
 Note: This is a more complete ChangeLog than the one in Appendix A of the
 manual, which only contains summaries of changes.
 -----------------------------------------------------------------------------
+2011-01-05
+    * advanced.xml: Added new section showing how to extend the PHPlot class
+      in order to customize default settings.
+
 2011-01-04
    * reference.xml: Add icons showing the point shapes in SetPointShapes().
    * images/shape-*.png: Add 20 new image files for point shapes.
